--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,9 @@
 @import "header.css";
 @import "nav-bar.css";
 @import "friend.css";
+@import "friends.css";
+@import "find.css";
+@import "more.css";
 
 * {
   box-sizing: border-box;
@@ -19,23 +22,5 @@ body {
 
 a {
   color: inherit;
-}
-
-.nav .nav__list-link {
-  position: relative;
-}
-
-.nav .nav__badge {
-  position: absolute;
-  top: -7px;
-  right: -7px;
-  font-size: 10px;
-  color: white;
-  background-color: #dc5d46;
-  width: 18px;
-  height: 18px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
+  text-decoration: none;
 }
