--- a/css/chat.css
+++ b/css/chat.css
@@ -1,5 +1,17 @@
+.header-wrapper {
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  padding: 5px 0px;
+  background-color: white;
+  box-shadow: 0 18px 36px -18px rgba(0, 0, 0, 0.3),
+    0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+  z-index: 2;
+}
+
 .chats-body {
   padding: 10px 0px;
+  padding-top: 100px;
 }
 
 .chats-body .header,
@@ -7,43 +19,188 @@
   padding: 0px 20px;
 }
 
-.chat {
+.chats-body {
   background-image: url("../images/chatBg.png");
-  min-height: 100vh;
+  min-height: 1000vh;
 }
 
-.chat__write {
+.chat__write--container {
+  width: 100%;
   position: fixed;
-  bottom: 50px;
-  width: 80%;
-  margin: 0 auto;
+  bottom: 0px;
   left: 0;
   right: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #fcfcfc;
-  padding: 0px 20px;
-  border-radius: 40px;
-  box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
-    0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
 }
 
-.chat__write i {
-  font-size: 22px;
+@keyframes float {
+  0% {
+    box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.5),
+      0 18px 36px -18px rgba(0, 0, 0, 0.5),
+      0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+  }
+  50% {
+    box-shadow: 0 30px 60px -60px rgba(50, 50, 93, 0.5),
+      0 18px 36px -18px rgba(0, 0, 0, 0.5),
+      0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+  }
+  100% {
+    box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.5),
+      0 18px 36px -18px rgba(0, 0, 0, 0.5),
+      0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+  }
 }
 
-.chat__write-column:nth-child(2) {
-  width: 80%;
-}
-
-.chat__write-column input {
-  padding: 20px 10px;
+.chat__write {
+  bottom: 0px;
   width: 100%;
+  border-radius: 0;
+  padding: 20px 60px;
   border: none;
   font-size: 14px;
+  margin: 0 auto;
+  transition: width 0.5s ease-in-out, box-shadow 0.5s ease-in-out,
+    border-radius 0.5s ease-in-out, transform 0.5s ease-in-out;
 }
 
-.chat__write-column input:focus {
+.chat__write:focus {
   outline: none;
+  width: 80%;
+  border-radius: 40px;
+  transform: translateY(-100px);
+  box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
+    0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+  animation: float 3s linear infinite;
+}
+.chat__icon-left {
+  position: absolute;
+  left: 10px;
+}
+
+.chat__icon-right {
+  position: absolute;
+  right: 10px;
+}
+
+.chat__icon {
+  font-size: 18px;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.chat__write:focus ~ .chat__icon {
+  opacity: 0;
+}
+
+.chat-screen .chat__messages {
+  border-top: 1px solid #f7f7f7;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0px 20px;
+  padding-top: 30px;
+}
+
+.chat__messages .chat__timestamp {
+  background-color: white;
+  font-size: 12px;
+  padding: 5px 10px;
+  border-radius: 10px;
+  margin-bottom: 30px;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 8px 16px -8px,
+    rgba(0, 0, 0, 0.024) 0px -6px 16px -6px;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.message {
+  display: flex;
+  align-items: flex-start;
+  margin-bottom: 20px;
+}
+
+.incoming-message {
+  align-self: flex-start;
+}
+
+.sent-message {
+  align-self: flex-end;
+}
+
+@keyframes turn {
+  from {
+    transform: none;
+  }
+  to {
+    transform: rotateY(1turn);
+  }
+}
+
+.incoming-message img {
+  width: 35px;
+  height: 35px;
+  border-radius: 15px;
+  margin-right: 15px;
+  animation: turn 1s linear infinite forwards;
+}
+
+.message .message__bubble {
+  background-color: white;
+  display: block;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px,
+    rgba(0, 0, 0, 0.024) 0px -6px 16px -6px;
+  padding: 10px 20px;
+  border-radius: 20px;
+  color: white;
+  font-weight: 600;
+}
+
+.incoming-message .message__author {
+  margin-top: 10px;
+  display: block;
+  font-weight: 600;
+  font-size: 12px;
+}
+
+.incoming-message .message__bubble {
+  border-bottom-left-radius: 0px;
+  background: linear-gradient(to right, #56ccf2, #2f80ed);
+}
+
+.sent-message .message__bubble {
+  border-bottom-right-radius: 0px;
+  background: linear-gradient(to left, #56ccf2, #2f80ed);
+}
+
+@keyframes incomingAnim {
+  from {
+    transform: translateX(-200px);
+    opacity: 0;
+  }
+  to {
+    transform: none;
+    opacity: 1;
+  }
+}
+
+.incoming-message {
+  animation: incomingAnim 0.5s ease-out;
+}
+
+@keyframes sentAnim {
+  from {
+    transform: translateX(200px);
+    opacity: 0;
+  }
+  to {
+    transform: none;
+    opacity: 1;
+  }
+}
+
+.sent-message {
+  animation: sentAnim 0.5s ease-out;
 }
